[tool.poetry]
name = "squeeze-time-linen"
version = "0.1.0"
description = ""
license = "Apache-2.0"
authors = ["h-terao"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.4.2"
jax = {extras = ["cpu"], version = "^0.4.28"}
flax = "^0.8.3"
einops = "^0.8.0"
chex = "^0.1.86"
numpy = "^1.26.4"

[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4
select = ["F", "B", "E","W"]
ignore = ["E731"]

[tool.ruff.pydocstyle]
convention = "google"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
